--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7469,3 +7469,57 @@ a.text-textillabor:hover, a.text-textillabor:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+
+input[name="ms-tk-opponent-goals"]:checked + label {
+  background-color: #141414;
+  margin-right: 45px; }
+
+input[name="ms-tk-opponent-goals"] + label {
+  background-color: #282828;
+  margin: 2px;
+  border-radius: 5px;
+  transition: all 0.3s; }
+
+input[name="ms-tk-opponent-goals"] + label span {
+  background-color: #505050;
+  border-radius: 25px;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 50px; }
+
+.tk-radio-counter {
+  width: 50px;
+  height: 50px; }
+
+.ts-radio-counter-stoper {
+  width: 50px;
+  height: 50px;
+  background-color: #282828;
+  margin: 2px;
+  border-radius: 5px;
+  z-index: 20; }
+
+.ts-radio-counter-stoper .ts-radio-counter-stoper-inner {
+  background-color: #505050;
+  border-radius: 25px;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 50px; }
+
+.ts-radio-counter-stoper .ts-radio-counter-stoper-inner .ts-radio-counter-stoper-screw {
+  border: solid 2px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  color: #282828;
+  background: #c8c8c8;
+  width: 20px;
+  height: 20px;
+  line-height: 10px;
+  font-size: 20px;
+  text-align: center;
+  vertical-align: center; }
