--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7470,25 +7470,9 @@ a.text-textillabor:hover, a.text-textillabor:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
-input[name="ms-tk-opponent-goals"]:checked + label {
+.ms-tk-goal-counter input[type="radio"]:checked + label {
   background-color: #141414;
-  margin-right: 45px; }
-
-input[name="ms-tk-opponent-goals"] + label {
-  background-color: #282828;
-  margin: 2px;
-  border-radius: 5px;
-  transition: all 0.3s; }
-
-input[name="ms-tk-opponent-goals"] + label span {
-  background-color: #505050;
-  border-radius: 25px;
-  width: 100%;
-  height: 100%;
-  color: white;
-  font-size: 25px;
-  font-weight: bold;
-  line-height: 50px; }
+  margin-right: auto; }
 
 .tk-radio-counter {
   width: 50px;
