--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,26 +5,9 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 
-input[name="ms-tk-opponent-goals"]:checked+label {
+.ms-tk-goal-counter input[type="radio"]:checked+label {
   background-color: rgb(20, 20, 20);
-  margin-right: 45px;
-}
-
-input[name="ms-tk-opponent-goals"]+label {
-  background-color: rgb(40, 40, 40);
-  margin: 2px;
-  border-radius: 5px;
-  transition: all 0.3s;
-}
-input[name="ms-tk-opponent-goals"]+label span {
-  background-color: rgb(80, 80, 80);
-  border-radius: 25px;
-  width: 100%;
-  height: 100%;
-  color: white;
-  font-size: 25px;
-  font-weight: bold;
-  line-height: 50px;
+  margin-right: auto;
 }
 
 .tk-radio-counter {
